--- a/React Native/package.json
+++ b/React Native/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@expo/timeago.js": "^1.0.0",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@shopify/flash-list": "^1.6.4",
+    "@shopify/flash-list": "1.6.3",
     "dotenv": "^16.4.5",
     "expo": "~50.0.14",
     "expo-build-properties": "^0.11.1",
@@ -28,9 +28,10 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "^3.8.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-ui-lib": "^7.20.3"
   },
   "devDependencies": {
