--- a/React Native/package.json
+++ b/React Native/package.json
@@ -12,27 +12,28 @@
     "@expo/timeago.js": "^1.0.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
-    "@shopify/flash-list": "1.6.3",
-    "dotenv": "^16.4.5",
-    "expo": "~50.0.14",
-    "expo-build-properties": "^0.11.1",
+    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@shopify/flash-list": "^1.6.3",
+    "dotenv": "^16.4.1",
+    "expo": "~50.0.15",
+    "expo-build-properties": "~0.11.1",
     "expo-clipboard": "^5.0.1",
-    "expo-constants": "^15.4.6",
+    "expo-constants": "^15.4.5",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "^2.9.4",
-    "firebase": "^10.11.0",
+    "expo-system-ui": "^2.9.3",
+    "firebase": "10.7.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-ui-lib": "^7.20.3"
+    "react-native-ui-lib": "^7.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
